tests/baselines/reference/unexpectedStatementBlockTerminator.errors.txt
==== tests/cases/compiler/unexpectedStatementBlockTerminator.ts (1 errors) ====
    class Foo {}
    
    class Bar {}
    case
    ~~~~
!!! error TS1128: Declaration or statement expected.
    
    function Goo() {return {a:1,b:2};}
    